--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -12,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/app_toolbar"
-            android:background="#222222"/>
+            android:background="#dd3e29"/>
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/fragment_holder"/>
