--- a/app/src/main/res/layout/fragment_exam.xml
+++ b/app/src/main/res/layout/fragment_exam.xml
@@ -16,6 +16,8 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:text="text"
+            android:textSize="30dp"
+            android:textColor="#dd3e29"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
