--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,14 @@
     <style name="Base.Theme.SkyRoot" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/black</item>
+
+        <!-- Defining that new color in ColorPrimaryDark -->
+        <item name="colorPrimaryDark">@color/orangeRed</item>
+        <item name="colorAccent">@color/black</item>
     </style>
 
     <style name="Theme.SkyRoot" parent="Base.Theme.SkyRoot" />
+
+
 </resources>
