--- a/app/src/main/res/layout/fragment_current_result.xml
+++ b/app/src/main/res/layout/fragment_current_result.xml
@@ -12,9 +12,22 @@
         android:layout_height="match_parent"
         android:text="current result fragment" />-->
 
+    <TextView
+        android:id="@+id/currentCount"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:text="result"
+        android:textSize="30dp"
+        android:textAlignment="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
     <ListView
         android:id="@+id/listViewCurrent"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="20dp"
+
         android:layout_height="wrap_content"
         />
 
