--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -14,8 +14,12 @@
 
     <ListView
         android:id="@+id/listViewFinal"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_width="350dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+
         />
 
 </FrameLayout>
